Add user sign up + log in function

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ fastapi = "*"
 uvicorn = {extras = ["standard"], version = "*"}
 psycopg2-binary = "*"
 alembic = "*"
+python-jose = {extras = ["cryptography"], version = "*"}
+passlib = {extras = ["bcrypt"], version = "*"}
+python-dotenv = "*"
 
 [dev-packages]
 
