Change database url using docker, add owner (user) to lists

--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://vwzodcig:e3nLAoa-UjSGVayN__6gST6utZBCaQxS@tyke.db.elephantsql.com/vwzodcig
+sqlalchemy.url = postgresql://postgres:secret@localhost:5432/postgres
 
 
 [post_write_hooks]
